refactor: 모든 모듈 lombok 자원 제거